# deadstream

./: .gitignore  .latest_tag  .pre-commit-config.yaml  .style.yapf  BuildYourOwn.md  DEVELOP.md  Dockerfile  Dockerfile2  GD.py  OperatingInstructions.md  README.md  Uploading_Cloud_Meta_Service.md  Uploading_Service.md  app.py  config.py  configure.py  connect_network.py  controls.py  dev-sync.sh  events_js.html  get_ids.js  get_ids.py  index.md  input_selector.py  load_archive.py  main.py  micro_livemusic.py  player.js  player_test.py  poti.py  pyproject.toml  requirements.lock.txt  requirements.txt  screen.py  serve_api.py  serve_options.py  setbreaks.q  setup.py  setup_network.py  simple.html  (+10 more)
.githooks/: pre-commit
.github/workflows/: api_server_msdocs-python-webapp-quickstart-sle.yml
GD/: __init__.py  tapes.py
cloud_server/: app.py  app.yaml  requirements.txt
deadstream/: GD.py  app.py  app2.py  app_old.py  controls.py  update_cloud_meta.py  update_cloud_meta_local.py
deadstream/timemachine/: Archivary.py  GD.py  MetaAPI.py  config.py  (+6 more)
docs/: AddingArchives.md  Building Pi Image.md  front_panel.eps  front_panel.fig
metadata/: .gitignore  set_breaks.csv
test/: short_test.py  test_GD.py  test_archivary.py
tests/: test_meta.py
timemachine/: .latest_tag  Archivary.py  Archive.py  GD.py  bluetoothctl.py  calibrate.py  config.py  connect_network.py  controls.py  livemusic.py  m78rpm.py  main.py  main_78.py  mpv.py  options.txt  phish_test.py  serve_options.py  set_breaks.csv  test78.py  testarchivary.py  testcontrols.py  testplayer.py  update.sh  utils.py
(+4 files in other folders)
