[project]
name = "deadstream"
version="0.1.0"
authors = [
    {name = "Steve Eichblatt", email = "info@spertilo.net"},
]
description = "API Server for venue, city, state, tracklists and url data from archive.org's Live Music Archive (LMA)."
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "aiohttp",
    "aiofiles",
    "requests",
    "Flask",
    "gunicorn>=20.1.0"
    # "deadstream @ git+https://github.com/eichblatt/deadstream.git@api_server"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"